[package]
authors = ["J David Smith <emallson@atlanis.net>"]
name = "cover"
version = "0.1.0"

[dependencies]
docopt = "0.7.0"
rand = "0.3.15"
rustc-serialize = "0.3.22"
serde = "0.9.5"
serde_derive = "0.9.5"
serde_json = "0.9.3"

[dependencies.rplex]
git = "https://github.com/emallson/rplex.git"
optional = false
